<resources>
    <string name="app_name">Shabyttan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="art_info">This painting depicts Monet\'s first wife, Camille, outside on a snowy day passing by the French doors of their home at Argenteuil. \n\nHer face is rendered in a radically bold Impressionist technique of mere daubs of paint quickly applied, just as the snow and trees are defined by broad, broken strokes of pure white and green. This painting depicts Monet\'s first wife, Camille, outside on a snowy day passing by the French doors of their home at Argenteuil. \n\nHer face is rendered in a radically bold Impressionist technique of mere daubs of paint quickly applied, just as the snow and trees are defined by broad, broken strokes of pure white and green.</string>
    <string name="art_author">Claude Monet</string>
    <string name="art_title">The Red Kerchief</string>
    <string name="app_title">Hello application</string>
    <string name="user_name">Hello my name is Farkhat</string>
    <string name="dummy_text">Van Gogh painted this self-portrait in the winter of 1887–88, when he had been in Paris for almost two years. It is clear from the work that he had studied the technique of the Pointillists and applied it in his own, original way. He placed the short stripes of paint in different directions. Where they follow the outline of his head, they form a kind of halo.\n\nThe painting is also one of Van Gogh’s boldest colour experiments in Paris. He placed complementary colours alongside one another using long brushstrokes: blue and orange in the background, and red and green in the beard and eyes. The colours intensify one another. The red pigment has faded, so the purple strokes are now blue, which means the contrast with the yellow is less powerful.</string>
    <string name="hint_search">Search artworks</string>
    <string name="recommended">Recommended for you</string>
    <string name="history">History</string>
    <string name="fun_fact">Fun fact: Madame Monet’s red cape draws the viewer’s attention beyond the glass of the French doors capturing her glance, a brief moment frozen in time. This painting was very special to Monet and he kept it with him for his entire life.</string>
    <string name="tip_1">Everyday art in your pocket!</string>
    <string name="default_web_client_id">773170139556-v372ipmae8t5vmutkfomlr05o67ql64b.apps.googleusercontent.com</string>
    <string name="author_unknown">Author unknown</string>
    <string name="login_with_google">Login with Google</string>
    <string name="author_paintings">Claude Monet’s paintings</string>
    <string name="favorites">Favorites</string>
    <string name="search_results">Search results</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="language">App language</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="no_favorites_yet">No Favorites Yet!</string>
    <string name="no_favorites_info">Click the ‘Like’ button on any artwork\npage too add a favorite.</string>
    <string name="no_result_info">Sorry, we couldn\'t find any results\nfor your query.</string>
    <string name="no_result">No Results Found!</string>
    <string name="have_account">Already have an account?</string>
    <string name="subtitle">Everyday art in you pocket!</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="for_you">For you</string>
    <string name="events">Events</string>
    <string name="discover">Discover</string>
    <string name="posts">Posts</string>
    <string name="change_language">Change language</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log out</string>
    <string name="more">More</string>
    <string name="change_password">Change password</string>
    <string name="e_mail">E - mail</string>
    <string name="account">Account</string>
    <string name="saved_events">Saved Events</string>
</resources>