<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_search_bg"
    android:orientation="vertical"
    tools:context=".presentation.ui.fragments.AuthorizationFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/logo" />

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/app_name"
                android:textColor="@color/art_title"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/subtitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/subtitle"
                android:textColor="@color/item_history_text"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/signupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_up"
        android:textColor="@color/item_history_text"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.185" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="110dp"
        android:layout_height="1dp"

        android:background="@color/item_history_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/username"
        android:textColorHint="@color/auth_box_icon"
        app:boxBackgroundColor="@color/auth_box_bg"
        app:boxCornerRadiusBottomEnd="40dp"
        app:boxCornerRadiusBottomStart="40dp"

        app:boxCornerRadiusTopEnd="40dp"
        app:boxCornerRadiusTopStart="40dp"
        app:endIconMode="custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.100000024"
        app:startIconDrawable="@drawable/ic_username"
        app:startIconTint="@color/auth_box_icon"
        tools:layout_editor_absoluteX="16dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@color/input_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/email"
        android:textColorHint="@color/auth_box_icon"
        app:boxBackgroundColor="@color/auth_box_bg"
        app:boxCornerRadiusBottomEnd="40dp"
        app:boxCornerRadiusBottomStart="40dp"
        app:boxCornerRadiusTopEnd="40dp"
        app:boxCornerRadiusTopStart="40dp"

        app:endIconMode="custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBox"
        app:layout_constraintVertical_bias="0.050000012"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/auth_box_icon"
        tools:layout_editor_absoluteX="16dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/input_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/password"
        android:textColorHint="@color/auth_box_icon"
        app:boxBackgroundColor="@color/auth_box_bg"
        app:boxCornerRadiusBottomEnd="40dp"
        app:boxCornerRadiusBottomStart="40dp"
        app:boxCornerRadiusTopEnd="40dp"
        app:boxCornerRadiusTopStart="40dp"
        app:endIconMode="custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBox2"
        app:layout_constraintVertical_bias="0.050000012"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/auth_box_icon"

        tools:layout_editor_absoluteX="16dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/input_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/button_bg"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/sign_up"
        android:textColor="@color/button_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBox3"
        app:layout_constraintVertical_bias="0.23000002"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/haveAccTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:fontFamily="@font/roboto"
        android:textColor="@color/art_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>