<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/art_container_color">


    <ImageView
        android:id="@+id/art_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/placeholder_image"
        android:scaleType="centerCrop"
        tools:src="@drawable/img_hero" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Title1">

            <!--            <ImageView-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:scaleType="centerCrop"-->
            <!--                android:src="@drawable/img_hero"-->
            <!--                app:layout_collapseMode="parallax"-->
            <!--                />-->

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/art_container_shape"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/art_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/placeholder_text"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/art_title"
                android:textSize="20sp"
                tools:background="@android:color/transparent"
                tools:text="@string/art_title" />


            <TextView
                android:id="@+id/art_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/placeholder_text"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/art_author"
                android:textSize="14sp"
                tools:background="@android:color/transparent"
                tools:text="@string/art_author" />


            <TextView
                android:id="@+id/art_description"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/placeholder_text"
                android:fontFamily="@font/roboto"
                android:lineSpacingExtra="8sp"
                android:textColor="@color/art_title"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:background="@android:color/transparent"
                tools:text="@string/dummy_text" />


            <TextView
                android:id="@+id/art_fun_fact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="89dp"
                android:fontFamily="@font/roboto_italic"
                android:lineSpacingExtra="8sp"
                android:textColor="@color/art_title"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:text="@string/fun_fact" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/like_action_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="90dp"
        android:backgroundTint="@color/action_button"
        android:src="@drawable/ic_heart"
        app:fabCustomSize="50dp"
        app:layout_anchor="@id/nested_scroll_view"
        app:layout_anchorGravity="top|end"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/share_action_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/action_button"
        android:src="@drawable/ic_share"
        app:fabCustomSize="50dp"
        app:layout_anchor="@id/nested_scroll_view"
        app:layout_anchorGravity="top|end"
        app:tint="@color/action_button_tint" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/to_top_action_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/action_button"
        android:src="@drawable/ic_arrow_up"
        android:visibility="gone"
        app:fabCustomSize="50dp"
        app:layout_anchor="@id/nested_scroll_view"
        app:layout_anchorGravity="bottom|start"
        app:tint="@android:color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>