<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_search_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragments.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_search"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:endIconDrawable="@drawable/ic_search"
            app:endIconMode="custom"
            app:layout_constraintBottom_toTopOf="@id/container_paintings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColor="@color/input_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/container_paintings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="13dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textBox">

            <TextView
                android:id="@+id/artistTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/author_paintings"
                android:textColor="@color/title"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/horizontalRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_painting" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_recommended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_paintings">

            <TextView
                android:id="@+id/recommendationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/recommended"
                android:textColor="@color/title"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommended_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_recommended" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/indicator_1"
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:layout_marginEnd="5dp"
                    android:backgroundTint="#D9D9D9"
                    app:cardCornerRadius="100dp"></androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/indicator_2"
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:layout_marginEnd="5dp"
                    android:backgroundTint="#6A6A6A"
                    app:cardCornerRadius="100dp"></androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/indicator_3"
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:layout_marginEnd="5dp"
                    android:backgroundTint="#6A6A6A"
                    app:cardCornerRadius="100dp"></androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/indicator_4"
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:layout_marginEnd="5dp"
                    android:backgroundTint="#6A6A6A"
                    app:cardCornerRadius="100dp"></androidx.cardview.widget.CardView>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_recommended">

            <TextView
                android:id="@+id/historyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/history"
                android:textColor="@color/title"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_history" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>