<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.SignInFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/auth_bg" />


    <LinearLayout
        android:id="@+id/logoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/layout"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="156dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfairdisplay_semibold"
            android:gravity="center"
            android:text="Log in"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginBottom="20dp"
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent">


        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#D9D9D9"
            android:fontFamily="@font/montserrat_semibold"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#D9D9D9"

            android:fontFamily="@font/montserrat_semibold"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/button_bg"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/sign_in"
            android:textColor="@color/button_text"
            android:textSize="16sp"
            app:cornerRadius="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/googleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#D8232323"
                android:fontFamily="@font/montserrat_semibold"
                android:text="Google"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="15dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/facebookButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"

                android:layout_weight="1"
                android:backgroundTint="#D8232323"
                android:fontFamily="@font/montserrat_semibold"
                android:text="Facebook"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="15dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="Forgot your password?"
            android:textColor="#8E8B8B"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="Change here"
            android:textColor="#ACACAC"
            android:textSize="12sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>